Used Integer.valueOf instead of new Integer() #1